# evidence-sanitizer

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
.opencode/skills/add-sanitization-rule/: SKILL.md
docs/: architecture.md  milestones.md  product-spec.md  security-model.md
src/evidence_sanitizer/: __init__.py  __main__.py  cli.py  sanitizer.py
tests/: test_bearer_rule.py  test_cli.py  test_cookie_rule.py  test_form_urlencoded_rule.py  test_golden_fixtures.py  test_json_field_rule.py  test_proxy_authorization_rule.py  test_query_parameter_rule.py  test_sanitizer_app.py  test_sensitive_header_rule.py
tests/fixtures/golden/: api_log_mixed.expected.txt  api_log_mixed.input.txt  burp_repeater_like.expected.txt  burp_repeater_like.input.txt  edge_cases_markers_and_malformed_cookie.expected.txt  edge_cases_markers_and_malformed_cookie.input.txt  form_urlencoded_body_mixed.expected.txt  form_urlencoded_body_mixed.input.txt  http_request_mixed.expected.txt  http_request_mixed.input.txt  json_api_body_mixed.expected.txt  json_api_body_mixed.input.txt  mobile_api_trace_like.expected.txt  mobile_api_trace_like.input.txt  proxy_authorization_mixed.expected.txt  proxy_authorization_mixed.input.txt  report_note_mixed.expected.txt  report_note_mixed.input.txt
